--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+== Twitter Clone
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Currently i am learning Ruby on Rails, so i clone the Twitter to give myself better understanding of rails.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+In this application, I have implementated basic functionalities of twitter and I have also used bootstrap to give my application same look as twitter. 
